--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 deadlypenguin/j/config.js
 deadlypenguin/code/irclog/config.js
 deadlypenguin/code/quotes/config.js
+deadlypenguin/code/karma/config.js
